--- a/Index.html
+++ b/Index.html
@@ -7,23 +7,46 @@
   </head>
   <body>
 
-    <div class="Header">
-    <img src="5FC8F04C-F4D0-412A-BD24-D88106CA1BAA.JPG" alt = "Headerbild"/>
+<div class="mamma">
+
+  <div>
+    <img class="pascal1" src="pascal.JPG" alt = "pascal"/>
   </div>
 
-<div>
-    <h1>ABOUT</h1>
-    <p class="Prestentation"> Text om mig. Jag heter Madeleine, är 25 år och pluggar på Handelshögskolan i Stockholm. Jag gillar bla bla bla. </p>
-  </div>
 
-    <h3>KONTAKT</h3>
-    <p> <b>MAIL:</b> kontakt.madeleineahlstrom@gmail.com </p>
-    <p> <b>INSTAGRAM:</b> <a href="http://www.instagram.com/madeleineahlstrom/">@madeleineahlstrom </a></p>
+<div class="Texten">
+    <h1>ABOUT.</h1>
+    <p class="Prestentation">
+Jag heter Madeleine, är 25 år och pluggar på Handelshögskolan i Stockholm. Alltsedan min lillebror fick cancer (allt gick bra, han är frisk idag) har jag varit intresserad av den lilla frågan: hur gör man något meningsfullt av sitt enda liv?
+<br>
+<br>
+Jag hittar regelbundet nya pusselbitar, men en stabil preferens är att rädda världen. Den här bloggen handlar om skärningspunkten mellan det lilla och det stora projektet. Hur skapar jag ett härligt liv för mig själv, samtidigt som jag gör stor skillnad?
+<br>
+<br>
+Jag gillar listor, feminism, att skriva, life hacks, egentid, effektiv altruism och att koka kaffe, kavla upp ärmarna och sätta fart.
+<br>
+<br>
+Kul att du har hittat hit, välkommen!
 
-    <img class="pascal1" src="B6468930-DB9E-4054-8471-5DE5F09F1F0D.JPG" alt = "pascal"/><div class="spread"><img src="IMG_3199.JPG" alt = "Spread girl power globally"/><img src="IMG_3199.JPG" alt = "Spread girl power globally"/>
+       </p>
+
+    <h1>CONTACT.</h1>
+    <p class="mail"> <b>Mejl:</b> kontakt.mejl@gmail.com </p>
+    <p class="Instagram"> <b>Instagram:</b> <a href="http://www.instagram.com/madeleineahlstrom/">@madeleineahlstrom </a></p>
 </div>
 
 
+<div class="Header">
+    <img src="hej.JPG" alt = "Headerbild"/>
+</div>
+
+
+</div>
+
+<div class="mamma2">
+
+<small class="copy"> © 2018 MADELINE AHLSTRÖM</small>
+</div>
 
   </body>
 </html>
