--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 
 
 <div class="Texten">
-    <h1>ABOUT.</h1>
+    <h1>ABOUT</h1>
     <p class="Prestentation">
 Jag heter Madeleine, är 25 år och pluggar på Handelshögskolan i Stockholm. Alltsedan min lillebror fick cancer (allt gick bra, han är frisk idag) har jag varit intresserad av den lilla frågan: hur gör man något meningsfullt av sitt enda liv?
 <br>
